# pi-led

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/ambient/: __init__.py  plugin.py  render.py
apps/birthday/: __init__.py  plugin.py  render.py
apps/carousel/: __init__.py  plugin.py
apps/clock/: __init__.py  plugin.py  render.py
apps/messages/: __init__.py  plugin.py  render.py
apps/plants/: __init__.py  plugin.py  rain.py  render.py
apps/weather/: __init__.py  client.py  plugin.py  render.py
apps/worldcup/: __init__.py  espn.py  flags.py  plugin.py  standings.py  teams.py
apps/worldcup/pages/: bracket.py  bracket_tree.py  matches.py  standings.py  tour.py
controller/: __main__.py  auth.py  config.py  runner.py  web.py
controller/templates/: admin.html  preview.html
deploy/: Caddyfile.snippet  DEPLOY.md  HARDWARE-SETUP.md  pi-led-renderer.service  pi-led-web.service  push.sh
pi_led_core/: __init__.py  canvas.py  matrix.py  plugin.py  registry.py  state.py
pi_led_core/fonts/: README.txt
